API endpoints for short url service
- User level get Endpoints
- Admin level customization for created endpints
